CSU06 e CSU10 implementacao // #35 e #60